--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html, body
 {
    background-color: black !important;
    color: white;
+   font-family: 'Oswald', sans-serif;
 }
 
 #myCanvas {
@@ -52,10 +53,10 @@ html, body
 
 .header {
 	text-align: center;
-	font-family: 'Amatic SC', cursive;
+	font-family: 'Oswald', sans-serif;
 	color: white;
-	font-size: 102px;
-	font-weight: bold;
+	font-size: 92px;
+	font-weight: 700;
 }
 
 .product {
@@ -81,22 +82,24 @@ html, body
 
 #year {
 	text-align: center;
-	font-family: 'Karla', sans-serif;
 	color: white;
 }
 
 #year_ { 
 	font-size: 32px;
+	color: #B70000;
+	font-weight: 700;
 }
 
 #percent { 
 	font-size: 32px;
+	color: #B70000;
+	font-weight: 700;
 }
 
 #percentage {
 	text-align: center;
 	color: white;
-	font-family: 'Karla', sans-serif;
 }
 
 .center {
@@ -112,7 +115,6 @@ html, body
 }
 
 #controls {
-  font-family: 'Karla', sans-serif;
   margin-top:15px;
   text-align: center;
   color: white;
@@ -192,6 +194,5 @@ a.link:hover {
 	padding-top: 10px;
 	margin-left: auto;
     margin-right: auto;
-    font-family: 'Karla', sans-serif;
     font-size: 10px;
 }
