--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ html, body
 }
 
 #year_ { 
-	font-size: 32px;
+	font-size: 35px;
 	color: #B70000;
 	font-weight: 700;
 }
@@ -136,7 +136,9 @@ html, body
 }
 
 .sliderValues span {
-  font-size:24px;
+  font-family: 'Oswald', sans-serif;
+  font-size: 20px;
+  color: white;
 }
 
 #timeScaleSlider {
